7265
This is enough to bring it out:
{code}
class C1A[
  @spec(Int, AnyRef) A,
  @spec(Int, AnyRef, Double) B
](v:A, w:B)

./a.scala:30: error: type mismatch;
 found   : String("abc")
 required: A$sp
    println(new C1A("abc", 123).getClass.getName)
            ^
one error found
{code}
